--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.questions-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.question {
+  height: 45vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  padding: 20px;
+  /* background: red; */
+}
+
+.answer {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px;
+  text-align: left;
+}
+
