--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,13 @@
 .questions-container{
   display: flex;
   flex-direction: column;
+  background-color: black;
+  color: white;
+  height: 100vh;
 }
 
 .question {
-  height: 45vh;
+  height: calc(50vh - 25px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,7 +56,7 @@
 }
 
 .answer {
-  height: 50vh;
+  height: calc(50vh - 25px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,3 +65,18 @@
   text-align: left;
 }
 
+.show-answer-button {
+  /* height: 50px; */
+  padding: 10px 10px;
+  border: 2px solid white;
+}
+
+.bottom-nav{
+  height: 50px;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: rgb(57, 57, 58);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
